# chat_local

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  chunks_table.py  cli.py  database.py  db_client.py  embedder.py  embedding.py  llm_client.py  logger.py  markdown_parser.py  pyproject.toml  scripts.py  system_prompt.py  util.py
alembic/: env.py
alembic/versions/: 15ab8cb2051d_create_chunks_table.py
